namespace OrganizationLib
{
    public interface IInit
    {
        void Init();
        void RandomInit();
        void Show();
    }
}